# image-compression-bot

./: .gitignore  README.md
compreston/: Cargo.toml
compreston-axum/: Cargo.toml
compreston-axum/src/: main.rs
compreston-site/: Cargo.toml
compreston-site/src/: main.rs
compreston-site/templates/: index.html.tera
compreston/src/: main.rs
