[package]
name = "compreson-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.12", features = ["multipart"] }
tokio = {version = "1.26.0", features = ["full"]}
tower-http = {version = "0.4.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
serde = { version = "1.0", features = ["derive"] }
