[package]
name = "compreston"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.12.0"
anyhow = "1.0.70"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.12.0"
shuttle-serenity = "0.12.0"
tokio = "1.26.0"
tracing = "0.1.37"
